# Jay

./: .gitignore  HARDWARE.md  LICENSE.md  README.md  SETUP.md  TESTING.md  requirements-dev.txt
.github/workflows/: ci.yml  interop-matrix.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/jay/: AndroidOpusCodec.kt  AudioPipeline.kt  BluetoothSppManager.kt  IntercomForegroundService.kt  MainActivity.kt  Protocol.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/jay/: ProtocolPacketFramingTest.kt  ReconnectBackoffPolicyTest.kt
desktop/: README.md
desktop/linux/: intercom_spp_client.py  intercom_web_bridge.py
desktop/mac/: README.md
desktop/win/: README.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_config.h  audio_task.c  audio_task.h  codec.c  codec.h  idf_component.yml  main.c  spp_task.c  spp_task.h
ios/: README.md
protocol/: SPEC.md  constants.h  constants.json  constants_loader.py  packet_format.md  packet_parser.c  packet_parser.h
tests/: run_hardware_matrix_check.py  run_software_gate_report.py  test_constants_sync.py  test_packet_format.py  test_stream_resilience.py
